# my-little-roguelike-2

./: Cargo.toml  README.md  quickrun.sh
assets/texture/: sprite_sheet.png~
assets/texture/ron/: sprite_sheet.ron
config/: bindings.ron  display.ron
src/: main.rs  math_utils.rs  resource_management.rs  states.rs
src/entities/: actor.rs  mod.rs
src/entities/actor_variants/: echo.rs  enemy.rs  mod.rs  player.rs
src/entities/actor_variants/enemy_variants/: mod.rs  poison_gas.rs  zombie.rs
src/systems/: camera.rs  echo_avatar.rs  enemy.rs  level_generator.rs  mod.rs  physics.rs  player_input.rs  projectile.rs
