[package]
name = "my-little-roguelike-2"
version = "0.1.0"
authors = ["Liverwurst Nova <thesupremeliverwurst@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst="0.15.0"
random="0.12.2"

[features]
default = ["vulkan"]
# empty = ["amethyst/empty"]
# metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
